Fix comment card text alignment

--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -1,8 +1,9 @@
 .comments-section {
   // padding-left: 50px;
   p {
+    padding: 16px;
     margin-bottom: 0;
-    padding: 15px;
+    // padding: 0 16px 16px 16px;
   }
   h5 {
     font-size: 18px;
@@ -16,15 +17,19 @@
   border: 1px rgba(0, 0, 0, 0.1) solid;
 
   border-radius: 3px;
-  margin: 10px 0;
+  margin: 20px 0;
 }
 .comment-card .comment-card-fixed-body {
-    width: 705px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // width: 705px;
   }
 
 .comment-card .comment-card-header {
   // border-bottom: 1px #EFF1F3 solid;
-  padding: 16px 16px;
+  // padding: 16px 16px;
   // border-bottom-color: rgba(0, 0, 0, 0.18);
   width: 100%;
   p {
@@ -34,14 +39,13 @@
 }
 
 .comment-card .comment-card-body {
-  padding: 16px 16px;
+  // padding: 16px 16px;
   p {
   margin-bottom: 0;
   }
 }
 .comment-card-avatar {
-  margin: 8px 0;
-  padding: 16px 16px;
+  padding: 16px 30px;
   p {
     font-weight: bolder;
     text-align: center;
@@ -50,25 +54,29 @@
   }
 }
 .comment-card-footer {
-  padding: 16px 0 0 16px;
+  // padding: 16px 0 0 16px;
   p {
     font-size: 14px;
     color: #CCCCCC;
+    text-align: right;
+    padding: 0 16px 16px 16px;
   }
 }
 .comment-card-upvote {
-  // padding-right: 15px;
-  padding-top: 15px;
+  padding-top: 6px;
+  display: flex;
   a {
     font-size: 20px;
-    color: #bababa;
+    color: #febb02;
     &:hover {
-      color: #febb02;
+      color: #bababa;
     }
     &:active {
       color: #febb02;
-      font-size: 26px;
     }
   }
-
+  i {
+    font-size: 18px;
+    padding-left: 6px;
+  }
 }
